Small spacing fix.

--- a/assets/style.css
+++ b/assets/style.css
@@ -316,7 +316,7 @@ a:hover {
   color: #a33;
   font-family: lato, sans-serif;
   font-size: 1.1em;
-  line-height: 1.3;
+  line-height: 1.5;
   font-weight: 300;
   letter-spacing: 1px;
   text-transform: uppercase;
